# solo-pool-rs

./: .gitignore  Cargo.toml  README.md  config.toml.example
.github/: copilot-instructions.md
src/: config.rs  error.rs  main.rs  stats.rs
src/bitcoin/: mod.rs  rpc.rs  template.rs  zmq.rs
src/metrics/: mod.rs
src/mining/: engine.rs  mod.rs  validator.rs  vardiff.rs
src/network/: dashboard.rs  mod.rs  server.rs  session.rs
src/protocol/: mod.rs  sv1.rs  sv2_stub.rs
src/security/: mod.rs
